<resources>
    <string name="app_name">Mipmap</string>
    <string name="app_logo_name">SocialApp</string>
    <string name="tagline">Connect with your world.</string>
    <string name="email_hint">Email or Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="or_divider">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="signup_tagline">Join our community today!</string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_address_hint">Email Address</string>
    <string name="terms_agreement">I agree to the Terms of Service and Privacy Policy</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="sign_up_google">Sign up with Google</string>
</resources>